--- a/Team/TODO
+++ b/Team/TODO
@@ -22,3 +22,10 @@ engineGetTextures( txd txd )
 engineAddTexture( txd txd, texture tex )
 engineGetTextureName( texture tex )
 engineRemoveTexture( txd txd, texture tex )
+engineLoadCOL( string path )
+engineGetCollision( coll coll, string name )
+engineGetCollisions( coll coll )
+engineAddCollision( coll coll, coll insert )
+engineRemoveCollision( coll coll, coll remove )
+engineGetCollisionName( coll coll )
+engineSetCollisionName( coll coll, string name )
