--- a/Team/README
+++ b/Team/README
@@ -1,4 +1,4 @@
-Upon joined the GREEN team, make sure you create a development folder in here.
+Upon joining the GREEN team, make sure you create a development folder in here.
 Every team member shall keep in touch with the team this way. :D
 
 Commit to your folder once in a while to show that you are active!
