- fixed a crash that happened when building IMG archives - added support for IMG_VERSION_1 IMG archive building - added a new version parameter to imgimport.exe, so you can now create IMG_VERSION_1 archives - fixed a bug in TxdGen that caused errors in the formatting of PC format TXDs - fixed the version of GTAIII (3.1.0.0 -> 3.1.0.1) - added a callstack dump to TxdGen in case the converter crashes (should not happen, anyway) - various fixes :-)

--- a/ps2 export tool/releases/CHANGELOG.txt
+++ b/ps2 export tool/releases/CHANGELOG.txt
@@ -1,3 +1,6 @@
+r571
+- fixed an embarrassing bug where uncompressed PS2 textures were not output in a valid D3DFORMAT - implemented conversion to valid D3DFORMAT texture if not already - various fixes
+---------------------
 r570
 - fixed parsing of PS2 GTA Vice City TXD files (maybe never tried them before) - added IMG compression support - made compressionQuality do something for DXT (if 1.0 then DXT5 is used) - various fixes
 ---------------------
