- removed deprecated files from rwtools - fixed an initialization problem in HeaderInfo that sometimes corrupted stream section version information and caused TXD archives to be rejected - fixed the autoMipmap flag management (it now removes that flag once a texture ships with custom mipmaps) - added mipmap generation to rwtools - added "outputDebug" flag for dumping TXD contents as TGA - fixed XBOX swizzling (no more using aru's code) - improved API regarding fetching texels from textures (it now does not decompress permanently as much anymore) - various fixes and performance improvements

--- a/ps2 export tool/releases/CHANGELOG.txt
+++ b/ps2 export tool/releases/CHANGELOG.txt
@@ -1,3 +1,6 @@
+r574
+- fixed a crash that happened when building IMG archives - added support for IMG_VERSION_1 IMG archive building - added a new version parameter to imgimport.exe, so you can now create IMG_VERSION_1 archives - fixed a bug in TxdGen that caus...
+---------------------
 r571
 - fixed an embarrassing bug where uncompressed PS2 textures were not output in a valid D3DFORMAT - implemented conversion to valid D3DFORMAT texture if not already - various fixes
 ---------------------
