- fixed a palettization issue where target rasters had too little depth when coming from compressed formats - fixed PS2 texture target properties (it now properly converts all input)

--- a/ps2 export tool/releases/CHANGELOG.txt
+++ b/ps2 export tool/releases/CHANGELOG.txt
@@ -1,3 +1,6 @@
+r585
+- added generic extension block storage so that extensions are preserved for all RenderWare objects
+---------------------
 r584
 - reimplemented palettization and compression - tons of great things
 ---------------------
